minikube/api-golang.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: apigo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigo
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: apigo
    spec:
      containers:
        - name: apigo
          image: >-
            quay.io/agustinlare/apigo
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: apigo
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: apigo
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /apigo
        pathType: Prefix
        backend:
          service:
            name: apigo
            port:
              number: 8080
