minikube/prometheus-server-ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: prometheus
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/rewrite-target: /$2
  spec:
    rules:
    - http:
        paths:
        - path: /prometheus(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: prometheus-server
              port:
                number: 9090
